src/objects/Support_Business_Hours__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Business_Hours_End__c</fullName>
        <label>Business Hours End(hh)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_End_mm__c</fullName>
        <label>Business Hours End (mm)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Start__c</fullName>
        <label>Business Hours Start (hh)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Start_mm__c</fullName>
        <label>Business Hours Start (mm)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_support__c</fullName>
        <label>Type of support</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Support Business Hours</label>
</CustomObject>